// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package com.android.designcompose.layout.proto;
import "styles.proto";
import "types.proto";
option java_multiple_files = true;

/* This message defines the layout style of a Figma node. It includes various
 * properties that control the node's position, size, and spacing, as well as
 * its alignment and flexbox behavior.
 */
message LayoutStyle {
  DimensionRect margin = 1;
  DimensionRect padding = 2;
  ItemSpacing item_spacing = 3;
  DimensionProto top = 4;
  DimensionProto left = 5;
  DimensionProto bottom = 6;
  DimensionProto right = 7;
  DimensionProto width = 8;
  DimensionProto height = 9;
  DimensionProto min_width = 10;
  DimensionProto max_width = 11;
  DimensionProto min_height = 12;
  DimensionProto max_height = 13;
  FloatSize bounding_box = 14;
  float flex_grow = 15;
  float flex_shrink = 16;
  DimensionProto flex_basis = 17;
  AlignSelf align_self = 18;
  AlignContent align_content = 19;
  AlignItems align_items = 20;
  FlexDirection flex_direction = 21;
  JustifyContent justify_content = 22;
  PositionType position_type = 23;
}
